# ai_village_but_better

./: .env  .env.example  .gitignore  .task_state.json  AUTO_START_IMPLEMENTATION.md  COMMANDS.md  CRITICAL_BUGS.md  CUA_INTEGRATION_GUIDE.md  Dockerfile  FIX_CONNECTION.md  QUICKSTART.md  QUICK_TEST_GUIDE.md  RUN_ALL.ps1  RUN_ALL.sh  TEST_CUA_AGENT_SCREENSHOT.md  TEST_SCREENSHOT_STORAGE.md  check_agent_responses.py  check_databases.py  cua_demo_audit.jsonl  demo_audit.jsonl  demo_perf.json  docker-compose.yml  main.py  minio-cors.json  package-lock.json  requirements.txt  run_task.py  send_message.py  setup-env.sh  setup_agent_databases.sh  sionAI Villageai_village_but_better && git show 1QUICKSTART.md  start_all_agents.sh  start_chat_server.sh  start_minio.ps1  stderr_output.txt  tasks.txt  test_agent.sh  test_agent1_notepad.ps1  test_agent_hello.ps1  test_agent_response.ps1  (+15 more)
.claude/: settings.local.json
CUA/: DOCKER.md  README.md  STORAGE_INTEGRATION.md  docker-compose.yml  main.py  organize_trajectories.py  storage_integration.py  traj-sorter.py  utils.py
agent-template/: .dockerignore  README.md  docker-compose.yml  pyproject.toml  storage_integration.py  traj-sorter.py
agent1_workdir/: story.txt
agents/: README.md
agents/agent1-cua/: Dockerfile  README.md  pyproject.toml  requirements.txt  utils.py
client/: package.json  vite.config.js
core/: __init__.py  telemetry.py
docker/: .env  Dockerfile  agent.py  requirements.txt
evaluator_history/: reports.jsonl
execution/: __init__.py
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  (+1 more)
(+112 files in other folders)
